// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tpxscript::JsCodegen should codegen arithmetic 1`] = `"((x + (y * z)))"`;

exports[`tpxscript::JsCodegen should codegen assignments 1`] = `
"x = 10
"
`;

exports[`tpxscript::JsCodegen should codegen conditionals 1`] = `
"foo ? bar : baz
"
`;

exports[`tpxscript::JsCodegen should codegen conditionals 2`] = `
"foo ? bar : false
"
`;

exports[`tpxscript::JsCodegen should codegen function calls 1`] = `
"foo(x, 1)
"
`;

exports[`tpxscript::JsCodegen should codegen function declarations 1`] = `
";(function(x) {
  return x
})
"
`;

exports[`tpxscript::JsCodegen should codegen function declarations 2`] = `
";(function(x) {
  return x
})
"
`;

exports[`tpxscript::JsCodegen should codegen function declarations 3`] = `
";(function foo(x) {
  return x
})
"
`;

exports[`tpxscript::JsCodegen should codegen function declarations 4`] = `
";(function foo(x) {
  return x
})
"
`;
